Add a label that represent a version

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -38,6 +38,7 @@ container_image(
     entrypoint = ["/usr/local/bin/bazel"],
     labels = {
         "org.opencontainers.image.source": "https://github.com/f110/bazel-container",
+        "org.opencontainers.image.version": "bazelisk",
     },
     tars = [
         ":bazelisk_bin",
