--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -20,6 +20,8 @@ chisel_tar(
         "//chisel-release/slices:debianutils",
         "//chisel-release/slices:grep",
         "//chisel-release/slices:sed",
+        "//chisel-release/slices:findutils",
+        "//chisel-release/slices:mawk",
         # Bazel dependency
         "//chisel-release/slices:g++",
         "//chisel-release/slices:zip",
