Add libpython3.11-stdlib and dash package

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -129,9 +129,11 @@ pkg_tar(
         "linux-libc-dev",
         "curl",
         "git",
-        "python3.11-minimal",
+        "python3-minimal",
         "python3-distutils",
+        "libpython3.11-stdlib",
         "bash",
+        "dash",
         "automake",
         "pkg-config",
     ),
