--- a/deb_packages.yaml
+++ b/deb_packages.yaml
@@ -25,8 +25,10 @@ packages:
   - linux-libc-dev
   - curl
   - git
-  - python3.11-minimal
+  - python3-minimal
   - python3-distutils
+  - libpython3.11-stdlib
   - bash
+  - dash
   - automake
   - pkg-config
